fix body-shift when modal-open

--- a/css/style_layout.css
+++ b/css/style_layout.css
@@ -55,6 +55,16 @@ body{
     margin: 0;
 }
 
+body.modal-open
+{
+  padding-right: 0!important;
+  overflow: hidden;
+}
+.modal-open .navbar-default, .modal-open .navbar-default 
+{
+  padding-right: 0!important;
+}
+
 headerLeft{
     grid-area: headerL;
     text-align: left;
